rename to .verbrc.md

--- a/.verbrc.md
+++ b/.verbrc.md
@@ -25,6 +25,19 @@ General options:
 * `-o`|`--org`: List repos for the specified GitHub org.
 * `-d`|`--dest`: The destination file. Default is `repos.json`
 
+Optional filtering
+
+* `-p`|`--prop`: The property filter by. Default is `name`.
+* `-s`|`--str`: The string to filter by. Default is `.+` (everything)
+
+Example:
+
+```bash
+repos assemble -s contrib
+```
+
+Saves a list of Assemble's repos that have `contrib` in the name to `assemble.json`.
+
 ## Author
 {%= contrib("jon") %}
 
