adds `namespace` option

--- a/.verbrc.md
+++ b/.verbrc.md
@@ -24,6 +24,7 @@ General options:
 * `-u`|`--user`: List repos for the specified GitHub username.
 * `-o`|`--org`: List repos for the specified GitHub org.
 * `-d`|`--dest`: The destination file. Default is `repos.json`
+* `-n`|`--namespace`: add the returned object to a property with the given name.
 
 Optional filtering
 
