run verb to generate readme documentation

--- a/.verb.md
+++ b/.verb.md
@@ -1,65 +1,20 @@
-# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
-
-> {%= description %}
-
-See the [GitHub Gist API documentation](https://developer.github.com/v3/gists/) for additional details on each method.
-
-## Install
-{%= include("install-npm", {save: true}) %}
-
 ## Usage
 
-```js
-var Repos = require('{%= name %}');
-var repos = new Repos({
-  username: 'foobarbaz123',
-  password: '**********'
-});
-```
-
-**Example**
-
-Download the [Markdown Cheatsheet](https://gist.github.com/jonschlinkert/5854601) gist.
+See [github-base][] for more information about available options and authentication choices.
 
 ```js
-repos.download({id: '5854601'}, function(err, res) {
-  // res is an object with details about the gist, including content,
-  // included files, etc.
-  console.log(res)
-});
+var repos = require('{%= name %}');
+var auth = {
+  // see github-base for other authentication options
+  token: 'YOUR_GITHUB_AUTH_TOKEN'
+};
+
+repos(['doowb', 'jonschlinkert'], auth)
+  .then(function(repos) {
+    // array of repository objects
+    console.log(repos);
+  })
+  .catch(console.error)
 ```
 
-See the [GitHub Gist API documentation](https://developer.github.com/v3/gists/) for additional details on each method.
-
-## API
-{%= apidocs("index.js") %}
-
-## Related projects
-{%= related(verb.related.list, {remove: name}) %}
-
-## Running tests
-{%= include("tests") %}
-
-## Contributing
-{%= include("contributing") %}
-
-## Author
-{%= include("author") %}
-
-## License
-{%= copyright() %}
-{%= license %}
-
-***
-
-{%= include("footer") %}
-
-
-```js
-//example.Repos
-var Repos = require('repos');
-var repos = new Repos({
-  username: 'foobarbaz123',
-  password: '**********'
-});
-```
+See the [GitHub API documentation for repositories](https://developer.github.com/v3/repos/) for more details about the objects returned for each repository.
