--- a/.verb.md
+++ b/.verb.md
@@ -10,3 +10,11 @@ See [github-base][] for more information about available options and authenticat
 
 See the [GitHub API documentation for repositories](https://developer.github.com/v3/repos/) for more details about the objects returned for each repository.
 
+## CLI
+
+```sh
+$ repos <names> <dest>
+```
+
+- `names` - one or more comma-separated user names or orgs
+- `dest` - destination path to use, default is `repos.json`
