update changelog, run verb to generate readme documentation

--- a/.verb.md
+++ b/.verb.md
@@ -1,14 +1,23 @@
-## HEADS UP!
+## Release history
 
-v1.0.0 was a complete refactor. Please see the following `usage` section for details.
+See the [changelog](./CHANGELOG.md) for updates.
 
 ## Usage
 
-See [github-base][] for more information about available options and authentication choices.
+This library is a tiny wrapper around [github-base][], see that project's readme for more information about available options and authentication choices.
 
 {%= apidocs("index.js") %}
 
 See the [GitHub API documentation for repositories](https://developer.github.com/v3/repos/) for more details about the objects returned for each repository.
+
+
+## Options
+
+| **Option** | **Type** | **Default** | **Description** |
+| --- | --- | --- | --- |
+| `filterOrgs` | `function` | undefined | Function for filtering organizations from the result. |
+| `filterRepos` | `function` | undefined | Function for filtering repositories from the result. |
+| `sort` | `boolean` | `true` | By default, the returned list is sorted by repository `name` |
 
 ## CLI
 
